--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,16 @@ on:
 
 jobs:
   e2e-tests:
-  
-     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-     steps:
-     - users: actions/checkout@v4
-     
-     - name: Node version
-       run: node --version
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Node version
+        run: node --version
 
-     - name: Instalando dependências
-	   run: npm install
+      - name: Instalando dependências
+        run: npm install
 
-     - name: Executando os testes
-    	run: npx cypress run
+      - name: Executando os testes
+        run: npx cypress run
